--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,6 @@ spring.application.name= stc
 server.port=8080
 spring.jpa.show-sql=true
 spring.profiles.active=dev
+spring.mvc.pathmatch.matching-strategy = ANT_PATH_MATCHER
+
+
